--- a/CedarMapsSampleApp/src/main/res/layout/fragment_forward_geocode.xml
+++ b/CedarMapsSampleApp/src/main/res/layout/fragment_forward_geocode.xml
@@ -5,7 +5,7 @@
     android:background="@android:color/white"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto">
 
-    <com.cedarstudios.cedarmapssdk.MapView
+    <com.cedarstudios.cedarmapssdk.mapbox.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
