--- a/CedarMapsSampleApp/src/main/res/layout/fragment_map.xml
+++ b/CedarMapsSampleApp/src/main/res/layout/fragment_map.xml
@@ -8,7 +8,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-    <com.cedarstudios.cedarmapssdk.mapbox.MapView
+    <com.cedarstudios.cedarmapssdk.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
