Adds "FormattedAddress" to ReverseGeocode methods. Adds new street types to ForwardGeocode methods. Upgrades to AndroidX. Built with SDK 29.

--- a/CedarMapsSampleApp/src/main/res/layout/fragment_map.xml
+++ b/CedarMapsSampleApp/src/main/res/layout/fragment_map.xml
@@ -14,7 +14,7 @@
         mapbox:mapbox_cameraZoom="14"
         />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/showCurrentLocationButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
